Revert "Address scrollbar bugs (#2912)"
This reverts commit d8c2168724c96c5c4b284652b966514984456838.

--- a/app/app.g.less
+++ b/app/app.g.less
@@ -371,8 +371,7 @@ select {
 }
 
 // Scrolls
-.os-scrollbar,
-::-webkit-scrollbar {
+.os-scrollbar {
   width: 8px;
   height: 8px;
 }
@@ -389,21 +388,14 @@ select {
 
 .os-scrollbar.os-scrollbar-horizontal {
   width: 100%;
-
-  &:hover,
-  &:active {
-    height: 16px;
-  }
 }
 
-.os-scrollbar-track,
-::-webkit-scrollbar-track {
+.os-scrollbar-track {
   background: var(--section);
   border-radius: 0 3px 3px 0;
 }
 
-.os-scrollbar-handle,
-::-webkit-scrollbar-thumb {
+.os-scrollbar-handle {
   background-color: var(--solid-input);
   border: 2px solid var(--border);
   border-right: 1px solid var(--border);
