--- a/app/components/pages/LayoutEditor.m.less
+++ b/app/components/pages/LayoutEditor.m.less
@@ -50,7 +50,11 @@
 }
 
 .element-container {
-  flex-grow: 1;
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .element-cell {
